[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://fonts/pixel_font_6.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/pixel_font_10.tres" type="DynamicFont" id=3]
[ext_resource path="res://evidence_card/evidence_card.gd" type="Script" id=4]

[node name="EvidenceCard" type="Node2D"]
script = ExtResource( 4 )

[node name="ReferenceRect" type="ReferenceRect" parent="."]
margin_right = 70.0
margin_bottom = 95.0
border_color = Color( 1, 1, 1, 1 )
border_width = 2.0
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ReferenceRect"]
margin_right = 70.0
margin_bottom = 95.0
color = Color( 0, 0, 0, 1 )

[node name="Logo" type="Sprite" parent="ReferenceRect"]
position = Vector2( 34.487, 32.9462 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )

[node name="Title" type="Label" parent="ReferenceRect"]
anchor_right = 1.0
margin_top = 4.16222
margin_bottom = 18.1622
custom_fonts/font = ExtResource( 3 )
text = "alibi"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Detail1" type="Label" parent="ReferenceRect"]
anchor_right = 1.0
margin_top = 53.6487
margin_bottom = 60.6487
custom_fonts/font = ExtResource( 2 )
text = "alibi"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Detail2" type="Label" parent="ReferenceRect"]
anchor_right = 1.0
margin_top = 65.7299
margin_bottom = 72.7299
custom_fonts/font = ExtResource( 2 )
text = "alibi"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Detail3" type="Label" parent="ReferenceRect"]
anchor_right = 1.0
margin_top = 77.7299
margin_bottom = 84.7299
custom_fonts/font = ExtResource( 2 )
text = "alibi"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_right = 70.0
margin_bottom = 95.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
